--- a/index.html
+++ b/index.html
@@ -941,9 +941,12 @@ document.getElementById("submitBtn").addEventListener("click", () => submitQuiz(
 document.getElementById("resetBtn").addEventListener("click", resetQuiz);
 
 setupAddQuestionForm();
+setupUploadQuestions();   
 setupGate();
+
 </script>
 </body>
 </html>
+
 
 
