--- a/index.html
+++ b/index.html
@@ -563,11 +563,34 @@ function renderScoreHistory(){
     </div>
   `).join("");
 }
+/***********************************************************
+ * 오답노트 / 점수 기록 초기화 함수 (추가)
+ ***********************************************************/
+function clearWrongNotes() {
+  if (!confirm("오답노트를 모두 삭제할까요?")) return;
+  saveWrongNotes([]);
+  renderWrongNotes();
+}
+
+function clearScoreHistory() {
+  if (!confirm("점수 기록을 모두 삭제할까요?")) return;
+  saveScoreHistory([]);
+  renderScoreHistory();
+}
 
 /***********************************************************
  * 6. 타이머
  ***********************************************************/
 let timerId=null, timerSeconds=0, quizStarted=false, quizStartTime=null, currentQuiz=[];
+/***********************************************************
+ * 타이머 중지 함수 (추가)
+ ***********************************************************/
+function stopTimer() {
+  if (timerId !== null) {
+    clearInterval(timerId);
+    timerId = null;
+  }
+}
 
 function updateTimerDisplay(){
   const el = document.getElementById("timer");
@@ -997,5 +1020,6 @@ setupGate();
 
 </body>
 </html>
+
 
 
