--- a/index.html
+++ b/index.html
@@ -1119,6 +1119,76 @@ function setupAddQuestionForm(){
     form.reset();
   });
 }
+/***********************************************************
+ * JSON 문제 업로드 (중복 ID 자동 재명명 포함)
+ ***********************************************************/
+function setupUploadQuestions() {
+  const input = document.getElementById("uploadFileInput");
+  const btn = document.getElementById("uploadFileBtn");
+
+  btn.addEventListener("click", () => {
+    const file = input.files?.[0];
+    if (!file) {
+      alert("파일을 먼저 선택하세요.");
+      return;
+    }
+
+    const reader = new FileReader();
+    reader.onload = (e) => {
+      try {
+        const arr = JSON.parse(e.target.result);
+        if (!Array.isArray(arr)) {
+          alert("JSON은 배열 형식이어야 합니다.");
+          return;
+        }
+
+        const custom = loadCustomQuestions();
+        const existingIds = new Set([
+          ...BASE_QUESTIONS.map(q => q.id),
+          ...custom.map(q => q.id)
+        ]);
+
+        const added = [];
+
+        arr.forEach((q, idx) => {
+          if (
+            !q.id || !q.chapter || !q.text ||
+            !Array.isArray(q.options) || q.options.length !== 4 ||
+            typeof q.answer !== "number"
+          ) {
+            console.warn("제외됨(포맷 오류):", q);
+            return;
+          }
+
+          // explanation 누락 처리
+          if (!("explanation" in q)) q.explanation = "";
+
+          // 🔥 ID 자동 리네이밍 적용
+          const newId = ensureUniqueId(q.id, existingIds);
+          existingIds.add(newId);
+          q.id = newId;
+
+          added.push(q);
+        });
+
+        if (!added.length) {
+          alert("추가 가능한 문제가 없습니다.");
+          return;
+        }
+
+        saveCustomQuestions(custom.concat(added));
+        refreshChapterDropdown();
+
+        alert(`${added.length}문제가 추가되었습니다!`);
+      } catch (err) {
+        console.error(err);
+        alert("JSON 파싱 오류. 파일 형식을 확인하세요.");
+      }
+    };
+
+    reader.readAsText(file);
+  });
+}
 
 /******************************************************************
  * 17. 사용자 문제 관리
